# rook

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
.planning/: PROJECT.md
crates/rook-client/: Cargo.toml  README.md
crates/rook-client/src/: client.rs  lib.rs
crates/rook-core/: Cargo.toml  README.md
crates/rook-core/src/: error.rs  lib.rs  runtime.rs
crates/rook-core/src/cognitive/: mod.rs  scheduler.rs  store.rs
crates/rook-core/src/config/: mod.rs
crates/rook-core/src/consolidation/: behavioral_tag.rs  manager.rs  mod.rs  phases.rs  scheduler.rs  synaptic_tag.rs
crates/rook-core/src/events/: bus.rs  event.rs  mod.rs  webhook.rs
crates/rook-core/src/export/: jsonl.rs  mod.rs  parquet.rs
crates/rook-core/src/import/: jsonl.rs  mod.rs
crates/rook-core/src/ingestion/: mod.rs  prediction_error.rs  strength_signals.rs  types.rs
crates/rook-core/src/ingestion/layers/: embedding.rs  keyword.rs  mod.rs  semantic.rs  temporal.rs
crates/rook-core/src/intentions/: bloom.rs  checker.rs  mod.rs  scheduler.rs  store.rs  triggers.rs  types.rs
crates/rook-core/src/memory/: history.rs  json_parser.rs  main.rs  mod.rs  prompts.rs  session.rs  telemetry.rs
crates/rook-core/src/migration/: mem0.rs  mod.rs
crates/rook-core/src/multimodal/: ingest.rs  mod.rs  types.rs
crates/rook-core/src/retrieval/: activation.rs  config.rs  dedup.rs  engine.rs  fusion.rs  mod.rs  modes.rs  tantivy_search.rs
crates/rook-core/src/traits/: embedder.rs  graph_store.rs  llm.rs  mod.rs  reranker.rs  vector_store.rs
crates/rook-core/src/types/: category.rs  filter.rs  fsrs.rs  memory_item.rs  message.rs  mod.rs
crates/rook-core/src/versioning/: mod.rs  store.rs  version.rs
crates/rook-core/tests/: export_import_test.rs
crates/rook-embeddings/: Cargo.toml  README.md
crates/rook-embeddings/src/: factory.rs  lib.rs  ollama.rs  openai.rs
crates/rook-extractors/: Cargo.toml  README.md
crates/rook-extractors/src/: docx.rs  error.rs  factory.rs  image.rs  lib.rs  pdf.rs  pipeline.rs  types.rs  vision.rs
crates/rook-graph-stores/: Cargo.toml  README.md
crates/rook-graph-stores/src/: factory.rs  kuzu.rs  lib.rs  memgraph.rs  neo4j.rs  neptune.rs
crates/rook-graph-stores/src/activation/: base_level.rs  config.rs  mod.rs  noise.rs
crates/rook-graph-stores/src/category/: mod.rs
crates/rook-graph-stores/src/embedded/: mod.rs  petgraph_ops.rs  schema.rs  sync.rs
crates/rook-graph-stores/src/entity/: extractor.rs  merger.rs  mod.rs  types.rs
crates/rook-llm/: Cargo.toml  README.md
crates/rook-llm/src/: anthropic.rs  factory.rs  lib.rs  ollama.rs  openai.rs
crates/rook-mcp/: Cargo.toml  README.md
crates/rook-mcp/src/: lib.rs  main.rs  server.rs  tools.rs
crates/rook-python/: Cargo.toml  README.md  pyproject.toml
crates/rook-python/src/: lib.rs  memory.rs  types.rs
crates/rook-python/tests/: test_memory.py
crates/rook-rerankers/: Cargo.toml  README.md
crates/rook-rerankers/src/: cohere.rs  factory.rs  lib.rs  llm_reranker.rs
crates/rook-server/: Cargo.toml  README.md
crates/rook-server/src/: error.rs  factory.rs  lib.rs  main.rs  middleware.rs  state.rs
crates/rook-server/src/routes/: config.rs  health.rs  memories.rs  mod.rs  search.rs  signals.rs
crates/rook-vector-stores/: Cargo.toml  README.md
crates/rook-vector-stores/src/: azure_ai_search.rs  cassandra.rs  chroma.rs  databricks.rs  duckdb.rs  elasticsearch.rs  factory.rs  faiss.rs  lancedb.rs  lib.rs  milvus.rs  mongodb.rs  mysql.rs  neptune.rs  opensearch.rs  pgvector.rs  pgvector_pooled.rs  pinecone.rs  qdrant.rs  redis_store.rs  s3_vectors.rs  sqlite.rs  sqlite_vec.rs  supabase.rs  upstash.rs  valkey.rs  vertex_ai.rs  weaviate.rs
crates/rook-vector-stores/tests/: pgvector_pooled_test.rs
docs/: Architecture.md  Concepts.md  Configuration.md  Getting-Started.md  Home.md  MCP-Server.md  MEMORY-MODEL-SPEC.md  Python-Bindings.md  REST-API.md  Rust-Library.md  USAGE_GUIDE.md
