[workspace]
resolver = "2"
members = [
    "crates/rook-core",
    "crates/rook-llm",
    "crates/rook-embeddings",
    "crates/rook-vector-stores",
    "crates/rook-graph-stores",
    "crates/rook-rerankers",
    "crates/rook-client",
    "crates/rook-server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"
repository = "https://github.com/heidornj/rook"
authors = ["Rook Team"]
description = "Long-term memory layer for AI agents"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Web framework (server)
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }
sqlite-vec = "0.1"
zerocopy = { version = "0.8", features = ["derive"] }

# Spaced repetition
fsrs = "5.2"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
dotenvy = "0.15"
dirs = "5.0"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
secrecy = "0.8"
url = "2.5"
regex = "1"
md5 = "0.7"
once_cell = "1.19"

# Testing
tokio-test = "0.4"
mockall = "0.12"

# Internal crates
rook-core = { path = "crates/rook-core" }
rook-llm = { path = "crates/rook-llm" }
rook-embeddings = { path = "crates/rook-embeddings" }
rook-vector-stores = { path = "crates/rook-vector-stores" }
rook-graph-stores = { path = "crates/rook-graph-stores" }
rook-rerankers = { path = "crates/rook-rerankers" }
rook-client = { path = "crates/rook-client" }
rook-server = { path = "crates/rook-server" }
