[workspace]
resolver = "2"
members = [
    "crates/rook-core",
    "crates/rook-llm",
    "crates/rook-embeddings",
    "crates/rook-vector-stores",
    "crates/rook-graph-stores",
    "crates/rook-rerankers",
    "crates/rook-client",
    "crates/rook-server",
    "crates/rook-extractors",
    "crates/rook-python",
    "crates/rook-mcp",
]

# Exclude rook-python from default build - it must be built with maturin
default-members = [
    "crates/rook-core",
    "crates/rook-llm",
    "crates/rook-embeddings",
    "crates/rook-vector-stores",
    "crates/rook-graph-stores",
    "crates/rook-rerankers",
    "crates/rook-client",
    "crates/rook-server",
    "crates/rook-extractors",
    "crates/rook-mcp",
]

[workspace.package]
version = "0.1.1"
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"
repository = "https://github.com/BangRocket/rook"
homepage = "https://github.com/BangRocket/rook"
documentation = "https://docs.rs/rook-core"
authors = ["Joshua Heidorn"]
description = "Long-term memory layer for AI agents"
keywords = ["memory", "ai", "llm", "agents", "cognitive"]
categories = ["science", "database", "asynchronous"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Web framework (server)
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }
sqlite-vec = "0.1"
zerocopy = { version = "0.8", features = ["derive"] }

# Graph operations
petgraph = { version = "0.6", features = ["serde-1"] }
ordered-float = "4"

# Spaced repetition
fsrs = "5.2"

# Full-text search
tantivy = "0.25"

# Bloom filter
fastbloom = "0.14"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
dotenvy = "0.15"
dirs = "5.0"

# Random number generation
rand = "0.8"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
secrecy = "0.8"
url = "2.5"
regex = "1"
md5 = "0.7"
once_cell = "1.19"
strum = { version = "0.27", features = ["derive"] }

# Testing
tokio-test = "0.4"
mockall = "0.12"
tempfile = "3"

# Scheduling
tokio-cron-scheduler = "0.14"

# Retry and crypto (for webhook delivery)
backon = "1.2"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# Internal crates
rook-core = { version = "0.1.1", path = "crates/rook-core" }
rook-llm = { version = "0.1.1", path = "crates/rook-llm" }
rook-embeddings = { version = "0.1.1", path = "crates/rook-embeddings" }
rook-vector-stores = { version = "0.1.1", path = "crates/rook-vector-stores" }
rook-graph-stores = { version = "0.1.1", path = "crates/rook-graph-stores" }
rook-rerankers = { version = "0.1.1", path = "crates/rook-rerankers" }
rook-client = { version = "0.1.1", path = "crates/rook-client" }
rook-server = { version = "0.1.1", path = "crates/rook-server" }
rook-extractors = { version = "0.1.1", path = "crates/rook-extractors" }
