[package]
name = "rook-client"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Client library for the Rook hosted API"

[dependencies]
rook-core = { workspace = true }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# UUID
uuid = { workspace = true }

# Date/time
chrono = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
