[package]
name = "rook-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"
description = "Core library for rook - traits, types, and memory implementation"

[dependencies]
# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }

# Database
rusqlite = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Configuration
dirs = { workspace = true }

# HTTP client (for telemetry)
reqwest = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
md5 = { workspace = true }
once_cell = { workspace = true }
strum = { workspace = true }

# Spaced repetition
fsrs = { workspace = true }

# Full-text search
tantivy = { workspace = true }

# Bloom filter
fastbloom = { workspace = true }

# Graph operations
petgraph = { workspace = true }
ordered-float = { workspace = true }

# Scheduling
tokio-cron-scheduler = { workspace = true }

# Retry and crypto (for webhook delivery)
backon = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

# Multimodal extraction (feature-gated)
rook-extractors = { version = "0.1.0", path = "../rook-extractors", optional = true }

# Export formats (feature-gated)
arrow = { version = "53", optional = true }
parquet = { version = "53", features = ["async"], optional = true }

# Streaming utilities
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["io"] }
pin-project-lite = "0.2"

[features]
default = []
multimodal = ["dep:rook-extractors"]
export = ["dep:arrow", "dep:parquet"]

[dev-dependencies]
tokio-test = { workspace = true }
mockall = { workspace = true }
tempfile = { workspace = true }
