[package]
name = "rook-graph-stores"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Graph store implementations for rook"

[dependencies]
rook-core = { workspace = true }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Graph database clients (optional)
neo4rs = { version = "0.7", optional = true }

# Embedded graph store dependencies
petgraph = { version = "0.6", features = ["serde-1"], optional = true }
rusqlite = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }

[features]
default = ["embedded"]
full = ["neo4j", "memgraph", "kuzu", "neptune", "embedded"]
neo4j = ["dep:neo4rs"]
memgraph = ["dep:neo4rs"]  # Memgraph is Neo4j-compatible
kuzu = []
neptune = []
embedded = ["dep:petgraph", "dep:rusqlite", "dep:chrono", "dep:uuid"]

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = "3.10"
