[package]
name = "rook-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"
description = "MCP server for Rook memory system"

[[bin]]
name = "rook-mcp"
path = "src/main.rs"

[dependencies]
rmcp = { version = "0.14", features = ["server", "transport-io"] }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"

# Internal dependencies
rook-core = { version = "0.1.0", path = "../rook-core" }
rook-llm = { version = "0.1.0", path = "../rook-llm" }
rook-embeddings = { version = "0.1.0", path = "../rook-embeddings" }
rook-vector-stores = { version = "0.1.0", path = "../rook-vector-stores", features = ["sqlite-vec"] }
dirs = "5.0"
