[package]
name = "rook-python"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Python bindings for Rook memory system"

[lib]
name = "rook_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py38"] }
tokio = { version = "1.35", features = ["rt-multi-thread"] }
serde_json = "1.0"

# Internal dependencies
rook-core = { path = "../rook-core" }
rook-llm = { path = "../rook-llm" }
rook-embeddings = { path = "../rook-embeddings" }
rook-vector-stores = { path = "../rook-vector-stores", features = ["qdrant"] }
