[package]
name = "rook-rerankers"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Reranker implementations for rook"

[dependencies]
rook-core = { workspace = true }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

[features]
default = ["cohere"]
full = ["cohere", "llm"]
cohere = []
llm = []

[dev-dependencies]
tokio-test = { workspace = true }
